assets/src/scss/6-elements/index/_sitejumbo.scss
.sitejumbo {
  background-color: $eshill-light-blue;
  background-repeat: no-repeat;
  background-position: right;
  background-image: url(../../../image/yiibackground.png);
  overflow: hidden;
  background-blend-mode: soft-light;
  padding-bottom: 0;
  margin-bottom: 0;
  z-index: -1;

  .container {
    padding-left: 1em;
    padding-top: 1em;
    padding-right: 1em;
    padding-bottom: 0;
    color: $eshill-section-bgcolor;

    h1 {
      font-family: $bold-headings-font-family;
      @include rem(font-size, fontsize(h1));

      @media (max-width: 1140px) {
        @include rem(font-size, fontsize(h2));
      }

      @media (max-width: 380px) {
        @include rem(font-size, fontsize(h3));
      }
    }

    .propaganda {
      color: darken($eshill-section-bgcolor, 8%);
      @include rem(font-size, fontsize(h3));

      @media (max-width: 1140px) {
        @include rem(font-size, fontsize(h4));
      }

      @media (max-width: 380px) {
        @include rem(font-size, fontsize(base));
      }
    }

    .btn {
      @include rem(font-size, fontsize(larger));
      font-family: $font-family-base;
      color: $eshill-light-blue;
      background-color: #F5FEC4;
      border-color: darken(#F5FEC4, 12%);

      &:focus,
      &.focus {
        color: $eshill-section-bgcolor;
        background-color: #83BFB3;
        border-color: darken(#83BFB3, 12%);
      }

      &:hover {
        color: $yii-blue;
        background-color: #BAD9C1;
        border-color: darken(#BAD9C1, 12%);
      }

      &:active,
      &.active,
      .open > &.dropdown-toggle {
        color: $eshill-section-bgcolor;
        background-color: #83BFB3;
        border-color: darken(#83BFB3, 12%);

        &:focus,
        &.focus {
          color: $eshill-section-bgcolor;
          background-color: #83BFB3;
          border-color: darken(#83BFB3, 12%);
        }
      }
    }
  }
}

.glide__track {
  padding: 0;
  margin-bottom: 0;
}

